// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbContainer renders correctly with project parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-3 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-3 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-3 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

<a
    class="emotion-0 emotion-1 emotion-2"
    data-leafygreen-ui="anchor-container"
    href="https://www.mongodb.com/docs/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-3"
    >
      Docs Home
    </span>
  </a>
  .emotion-0 {
  cursor: default;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

<span
    class="emotion-0 emotion-1"
  >
     → 
  </span>
  .emotion-0 {
  font-size: 13px;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-3 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-3 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-3 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

<a
    class="emotion-0 emotion-1 emotion-2"
    data-leafygreen-ui="anchor-container"
    href="https://www.mongodb.com/docs/view-analyze"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-3"
    >
      View & Analyze
    </span>
  </a>
  .emotion-0 {
  cursor: default;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

<span
    class="emotion-0 emotion-1"
  >
     → 
  </span>
  .emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  font-size: 13px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1>code {
  color: #016BF8;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-1:focus .emotion-1::after {
  background-color: #0498EC;
}

.emotion-1:hover::after {
  background-color: #E8EDEB;
}

.emotion-1:last-of-type {
  color: #1C2D38;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover:not(:last-of-type),
.emotion-1:focus:not(:last-of-type) {
  color: #1C2D38;
}

<a
    class="emotion-0 emotion-1 emotion-2"
    href="/documents/view/"
  >
    MongoDB Compass
  </a>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly without project parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 13px;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

.emotion-0:hover,
.emotion-0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:not(:last-of-type),
.emotion-0:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-3 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-3 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-3 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

<a
    class="emotion-0 emotion-1 emotion-2"
    data-leafygreen-ui="anchor-container"
    href="https://www.mongodb.com/docs/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="emotion-3"
    >
      Docs Home
    </span>
  </a>
  .emotion-0 {
  cursor: default;
}

.emotion-0:last-of-type {
  color: #1C2D38;
}

<span
    class="emotion-0 emotion-1"
  >
     → 
  </span>
  .emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
  font-size: 13px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1>code {
  color: #016BF8;
}

.emotion-1::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-1:focus .emotion-1::after {
  background-color: #0498EC;
}

.emotion-1:hover::after {
  background-color: #E8EDEB;
}

.emotion-1:last-of-type {
  color: #1C2D38;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover:not(:last-of-type),
.emotion-1:focus:not(:last-of-type) {
  color: #1C2D38;
}

<a
    class="emotion-0 emotion-1 emotion-2"
    href="/view-analyze/"
  >
    View & Analyze Data
  </a>
</DocumentFragment>
`;
